// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calltree/ProfileCallTreeView renders an inverted call tree 1`] = `
<div
  className="treeAndSidebarWrapper"
>
  <ol
    className="filterNavigatorBar calltreeTransformNavigator"
  >
    <li
      className="filterNavigatorBarItem filterNavigatorBarRootItem filterNavigatorBarSelectedItem filterNavigatorBarLeafItem"
      data-index={0}
      onClick={[Function]}
      title="Complete \\"Empty\\""
    >
      <span
        className="filterNavigatorBarItemContent"
      >
        Complete "Empty"
      </span>
    </li>
  </ol>
  <div
    className="profileCallTreeSettings"
  >
    <ul
      className="profileCallTreeSettingsList"
    >
      <li
        className="profileCallTreeSettingsListItem"
      >
        <label
          className="profileCallTreeSettingsLabel"
        >
          Filter:
          <select
            className="profileCallTreeSettingsSelect"
            onChange={[Function]}
            value="combined"
          >
            <option
              value="combined"
            >
              Combined stacks
            </option>
            <option
              value="js"
            >
              JS only
            </option>
            <option
              value="cpp"
            >
              C++ only
            </option>
          </select>
        </label>
      </li>
      <li
        className="profileCallTreeSettingsListItem"
      >
        <label
          className="profileCallTreeSettingsLabel"
        >
          <input
            checked={false}
            className="profileCallTreeSettingsCheckbox"
            onChange={[Function]}
            type="checkbox"
          />
           Invert call stack
        </label>
      </li>
    </ul>
    <div
      className="profileCallTreeSettingsSearchbar"
    >
      <label
        className="profileCallTreeSettingsSearchbarLabel"
      >
        Filter stacks: 
        <form
          className="idleSearchField profileCallTreeSettingsSearchField"
          onSubmit={[Function]}
        >
          <input
            className="idleSearchFieldInput"
            name="search"
            onChange={[Function]}
            onFocus={[Function]}
            required="required"
            title="Only display stacks which contain a function whose name matches this substring"
            type="search"
            value=""
          />
          <input
            className="idleSearchFieldButton"
            onClick={[Function]}
            onFocus={[Function]}
            type="reset"
          />
        </form>
      </label>
    </div>
  </div>
  <div
    className="treeView"
  >
    <div
      className="treeViewHeader"
    >
      <span
        className="treeViewHeaderColumn treeViewFixedColumn totalTimePercent"
      >
        
      </span>
      <span
        className="treeViewHeaderColumn treeViewFixedColumn totalTime"
      >
        Running Time (ms)
      </span>
      <span
        className="treeViewHeaderColumn treeViewFixedColumn selfTime"
      >
        Self (ms)
      </span>
      <span
        className="treeViewHeaderColumn treeViewFixedColumn icon"
      >
        
      </span>
      <span
        className="treeViewHeaderColumn treeViewMainColumn name"
      >
        
      </span>
    </div>
    <div
      className="react-contextmenu-wrapper treeViewContextMenu"
      onContextMenu={[Function]}
      onMouseDown={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="treeViewBody"
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <div
          className="treeViewBodyInnerWrapper"
        >
          <div
            className="treeViewBodyInner treeViewBodyInner0"
            style={
              Object {
                "height": "112px",
                "width": undefined,
              }
            }
          >
            <div
              className="treeViewBodyInner treeViewBodyInner0TopSpacer"
              style={
                Object {
                  "height": "0px",
                }
              }
            />
            <div
              className="treeViewBodyInner treeViewBodyInner0InnerChunk"
            >
              <div
                className="treeViewRow treeViewRowFixedColumns even "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTimePercent"
                >
                  100%
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTime"
                >
                  3
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn selfTime"
                >
                  —
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn icon"
                >
                  <div
                    className="treeRowIcon "
                  />
                </span>
              </div>
              <div
                className="treeViewRow treeViewRowFixedColumns odd "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTimePercent"
                >
                  100%
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTime"
                >
                  3
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn selfTime"
                >
                  —
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn icon"
                >
                  <div
                    className="treeRowIcon "
                  />
                </span>
              </div>
              <div
                className="treeViewRow treeViewRowFixedColumns even "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTimePercent"
                >
                  67%
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTime"
                >
                  2
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn selfTime"
                >
                  —
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn icon"
                >
                  <div
                    className="treeRowIcon "
                  />
                </span>
              </div>
              <div
                className="treeViewRow treeViewRowFixedColumns odd "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTimePercent"
                >
                  33%
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTime"
                >
                  1
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn selfTime"
                >
                  —
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn icon"
                >
                  <div
                    className="treeRowIcon "
                  />
                </span>
              </div>
              <div
                className="treeViewRow treeViewRowFixedColumns even selected"
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTimePercent"
                >
                  33%
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTime"
                >
                  1
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn selfTime"
                >
                  1
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn icon"
                >
                  <div
                    className="treeRowIcon "
                  />
                </span>
              </div>
              <div
                className="treeViewRow treeViewRowFixedColumns odd "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTimePercent"
                >
                  33%
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTime"
                >
                  1
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn selfTime"
                >
                  —
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn icon"
                >
                  <div
                    className="treeRowIcon "
                  />
                </span>
              </div>
              <div
                className="treeViewRow treeViewRowFixedColumns even "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTimePercent"
                >
                  33%
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTime"
                >
                  1
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn selfTime"
                >
                  —
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn icon"
                >
                  <div
                    className="treeRowIcon "
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            className="treeViewBodyInner treeViewBodyInner1"
            style={
              Object {
                "height": "112px",
                "width": "3000px",
              }
            }
          >
            <div
              className="treeViewBodyInner treeViewBodyInner1TopSpacer"
              style={
                Object {
                  "height": "0px",
                }
              }
            />
            <div
              className="treeViewBodyInner treeViewBodyInner1InnerChunk"
            >
              <div
                className="treeViewRow treeViewRowScrolledColumns even  "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeRowIndentSpacer"
                  style={
                    Object {
                      "width": "0px",
                    }
                  }
                />
                <span
                  className="treeRowToggleButton expanded canBeExpanded"
                />
                <span
                  className="treeViewRowColumn treeViewMainColumn name"
                >
                  A
                </span>
                <span
                  className="treeViewRowColumn treeViewAppendageColumn lib"
                >
                  
                </span>
                <input
                  className="treeViewRowAppendageButton focusCallstackButton"
                  data-appendage-button-name="focusCallstackButton"
                  type="button"
                  value=""
                />
              </div>
              <div
                className="treeViewRow treeViewRowScrolledColumns odd  "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeRowIndentSpacer"
                  style={
                    Object {
                      "width": "10px",
                    }
                  }
                />
                <span
                  className="treeRowToggleButton expanded canBeExpanded"
                />
                <span
                  className="treeViewRowColumn treeViewMainColumn name"
                >
                  B
                </span>
                <span
                  className="treeViewRowColumn treeViewAppendageColumn lib"
                >
                  
                </span>
                <input
                  className="treeViewRowAppendageButton focusCallstackButton"
                  data-appendage-button-name="focusCallstackButton"
                  type="button"
                  value=""
                />
              </div>
              <div
                className="treeViewRow treeViewRowScrolledColumns even  "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeRowIndentSpacer"
                  style={
                    Object {
                      "width": "20px",
                    }
                  }
                />
                <span
                  className="treeRowToggleButton expanded canBeExpanded"
                />
                <span
                  className="treeViewRowColumn treeViewMainColumn name"
                >
                  C
                </span>
                <span
                  className="treeViewRowColumn treeViewAppendageColumn lib"
                >
                  
                </span>
                <input
                  className="treeViewRowAppendageButton focusCallstackButton"
                  data-appendage-button-name="focusCallstackButton"
                  type="button"
                  value=""
                />
              </div>
              <div
                className="treeViewRow treeViewRowScrolledColumns odd  "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeRowIndentSpacer"
                  style={
                    Object {
                      "width": "30px",
                    }
                  }
                />
                <span
                  className="treeRowToggleButton expanded canBeExpanded"
                />
                <span
                  className="treeViewRowColumn treeViewMainColumn name"
                >
                  D
                </span>
                <span
                  className="treeViewRowColumn treeViewAppendageColumn lib"
                >
                  
                </span>
                <input
                  className="treeViewRowAppendageButton focusCallstackButton"
                  data-appendage-button-name="focusCallstackButton"
                  type="button"
                  value=""
                />
              </div>
              <div
                className="treeViewRow treeViewRowScrolledColumns even selected "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeRowIndentSpacer"
                  style={
                    Object {
                      "width": "40px",
                    }
                  }
                />
                <span
                  className="treeRowToggleButton expanded leaf"
                />
                <span
                  className="treeViewRowColumn treeViewMainColumn name"
                >
                  E
                </span>
                <span
                  className="treeViewRowColumn treeViewAppendageColumn lib"
                >
                  
                </span>
                <input
                  className="treeViewRowAppendageButton focusCallstackButton"
                  data-appendage-button-name="focusCallstackButton"
                  type="button"
                  value=""
                />
              </div>
              <div
                className="treeViewRow treeViewRowScrolledColumns odd  "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeRowIndentSpacer"
                  style={
                    Object {
                      "width": "30px",
                    }
                  }
                />
                <span
                  className="treeRowToggleButton collapsed canBeExpanded"
                />
                <span
                  className="treeViewRowColumn treeViewMainColumn name"
                >
                  X
                </span>
                <span
                  className="treeViewRowColumn treeViewAppendageColumn lib"
                >
                  
                </span>
                <input
                  className="treeViewRowAppendageButton focusCallstackButton"
                  data-appendage-button-name="focusCallstackButton"
                  type="button"
                  value=""
                />
              </div>
              <div
                className="treeViewRow treeViewRowScrolledColumns even  "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeRowIndentSpacer"
                  style={
                    Object {
                      "width": "20px",
                    }
                  }
                />
                <span
                  className="treeRowToggleButton collapsed canBeExpanded"
                />
                <span
                  className="treeViewRowColumn treeViewMainColumn name"
                >
                  X
                </span>
                <span
                  className="treeViewRowColumn treeViewAppendageColumn lib"
                >
                  
                </span>
                <input
                  className="treeViewRowAppendageButton focusCallstackButton"
                  data-appendage-button-name="focusCallstackButton"
                  type="button"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`calltree/ProfileCallTreeView renders an unfiltered call tree 1`] = `
<div
  className="treeAndSidebarWrapper"
>
  <ol
    className="filterNavigatorBar calltreeTransformNavigator"
  >
    <li
      className="filterNavigatorBarItem filterNavigatorBarRootItem filterNavigatorBarSelectedItem filterNavigatorBarLeafItem"
      data-index={0}
      onClick={[Function]}
      title="Complete \\"Empty\\""
    >
      <span
        className="filterNavigatorBarItemContent"
      >
        Complete "Empty"
      </span>
    </li>
  </ol>
  <div
    className="profileCallTreeSettings"
  >
    <ul
      className="profileCallTreeSettingsList"
    >
      <li
        className="profileCallTreeSettingsListItem"
      >
        <label
          className="profileCallTreeSettingsLabel"
        >
          Filter:
          <select
            className="profileCallTreeSettingsSelect"
            onChange={[Function]}
            value="combined"
          >
            <option
              value="combined"
            >
              Combined stacks
            </option>
            <option
              value="js"
            >
              JS only
            </option>
            <option
              value="cpp"
            >
              C++ only
            </option>
          </select>
        </label>
      </li>
      <li
        className="profileCallTreeSettingsListItem"
      >
        <label
          className="profileCallTreeSettingsLabel"
        >
          <input
            checked={false}
            className="profileCallTreeSettingsCheckbox"
            onChange={[Function]}
            type="checkbox"
          />
           Invert call stack
        </label>
      </li>
    </ul>
    <div
      className="profileCallTreeSettingsSearchbar"
    >
      <label
        className="profileCallTreeSettingsSearchbarLabel"
      >
        Filter stacks: 
        <form
          className="idleSearchField profileCallTreeSettingsSearchField"
          onSubmit={[Function]}
        >
          <input
            className="idleSearchFieldInput"
            name="search"
            onChange={[Function]}
            onFocus={[Function]}
            required="required"
            title="Only display stacks which contain a function whose name matches this substring"
            type="search"
            value=""
          />
          <input
            className="idleSearchFieldButton"
            onClick={[Function]}
            onFocus={[Function]}
            type="reset"
          />
        </form>
      </label>
    </div>
  </div>
  <div
    className="treeView"
  >
    <div
      className="treeViewHeader"
    >
      <span
        className="treeViewHeaderColumn treeViewFixedColumn totalTimePercent"
      >
        
      </span>
      <span
        className="treeViewHeaderColumn treeViewFixedColumn totalTime"
      >
        Running Time (ms)
      </span>
      <span
        className="treeViewHeaderColumn treeViewFixedColumn selfTime"
      >
        Self (ms)
      </span>
      <span
        className="treeViewHeaderColumn treeViewFixedColumn icon"
      >
        
      </span>
      <span
        className="treeViewHeaderColumn treeViewMainColumn name"
      >
        
      </span>
    </div>
    <div
      className="react-contextmenu-wrapper treeViewContextMenu"
      onContextMenu={[Function]}
      onMouseDown={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="treeViewBody"
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <div
          className="treeViewBodyInnerWrapper"
        >
          <div
            className="treeViewBodyInner treeViewBodyInner0"
            style={
              Object {
                "height": "112px",
                "width": undefined,
              }
            }
          >
            <div
              className="treeViewBodyInner treeViewBodyInner0TopSpacer"
              style={
                Object {
                  "height": "0px",
                }
              }
            />
            <div
              className="treeViewBodyInner treeViewBodyInner0InnerChunk"
            >
              <div
                className="treeViewRow treeViewRowFixedColumns even "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTimePercent"
                >
                  100%
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTime"
                >
                  3
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn selfTime"
                >
                  —
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn icon"
                >
                  <div
                    className="treeRowIcon "
                  />
                </span>
              </div>
              <div
                className="treeViewRow treeViewRowFixedColumns odd "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTimePercent"
                >
                  100%
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTime"
                >
                  3
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn selfTime"
                >
                  —
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn icon"
                >
                  <div
                    className="treeRowIcon "
                  />
                </span>
              </div>
              <div
                className="treeViewRow treeViewRowFixedColumns even "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTimePercent"
                >
                  67%
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTime"
                >
                  2
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn selfTime"
                >
                  —
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn icon"
                >
                  <div
                    className="treeRowIcon "
                  />
                </span>
              </div>
              <div
                className="treeViewRow treeViewRowFixedColumns odd "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTimePercent"
                >
                  33%
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTime"
                >
                  1
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn selfTime"
                >
                  —
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn icon"
                >
                  <div
                    className="treeRowIcon "
                  />
                </span>
              </div>
              <div
                className="treeViewRow treeViewRowFixedColumns even selected"
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTimePercent"
                >
                  33%
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTime"
                >
                  1
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn selfTime"
                >
                  1
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn icon"
                >
                  <div
                    className="treeRowIcon "
                  />
                </span>
              </div>
              <div
                className="treeViewRow treeViewRowFixedColumns odd "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTimePercent"
                >
                  33%
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTime"
                >
                  1
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn selfTime"
                >
                  —
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn icon"
                >
                  <div
                    className="treeRowIcon "
                  />
                </span>
              </div>
              <div
                className="treeViewRow treeViewRowFixedColumns even "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTimePercent"
                >
                  33%
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTime"
                >
                  1
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn selfTime"
                >
                  —
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn icon"
                >
                  <div
                    className="treeRowIcon "
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            className="treeViewBodyInner treeViewBodyInner1"
            style={
              Object {
                "height": "112px",
                "width": "3000px",
              }
            }
          >
            <div
              className="treeViewBodyInner treeViewBodyInner1TopSpacer"
              style={
                Object {
                  "height": "0px",
                }
              }
            />
            <div
              className="treeViewBodyInner treeViewBodyInner1InnerChunk"
            >
              <div
                className="treeViewRow treeViewRowScrolledColumns even  "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeRowIndentSpacer"
                  style={
                    Object {
                      "width": "0px",
                    }
                  }
                />
                <span
                  className="treeRowToggleButton expanded canBeExpanded"
                />
                <span
                  className="treeViewRowColumn treeViewMainColumn name"
                >
                  A
                </span>
                <span
                  className="treeViewRowColumn treeViewAppendageColumn lib"
                >
                  
                </span>
                <input
                  className="treeViewRowAppendageButton focusCallstackButton"
                  data-appendage-button-name="focusCallstackButton"
                  type="button"
                  value=""
                />
              </div>
              <div
                className="treeViewRow treeViewRowScrolledColumns odd  "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeRowIndentSpacer"
                  style={
                    Object {
                      "width": "10px",
                    }
                  }
                />
                <span
                  className="treeRowToggleButton expanded canBeExpanded"
                />
                <span
                  className="treeViewRowColumn treeViewMainColumn name"
                >
                  B
                </span>
                <span
                  className="treeViewRowColumn treeViewAppendageColumn lib"
                >
                  
                </span>
                <input
                  className="treeViewRowAppendageButton focusCallstackButton"
                  data-appendage-button-name="focusCallstackButton"
                  type="button"
                  value=""
                />
              </div>
              <div
                className="treeViewRow treeViewRowScrolledColumns even  "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeRowIndentSpacer"
                  style={
                    Object {
                      "width": "20px",
                    }
                  }
                />
                <span
                  className="treeRowToggleButton expanded canBeExpanded"
                />
                <span
                  className="treeViewRowColumn treeViewMainColumn name"
                >
                  C
                </span>
                <span
                  className="treeViewRowColumn treeViewAppendageColumn lib"
                >
                  
                </span>
                <input
                  className="treeViewRowAppendageButton focusCallstackButton"
                  data-appendage-button-name="focusCallstackButton"
                  type="button"
                  value=""
                />
              </div>
              <div
                className="treeViewRow treeViewRowScrolledColumns odd  "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeRowIndentSpacer"
                  style={
                    Object {
                      "width": "30px",
                    }
                  }
                />
                <span
                  className="treeRowToggleButton expanded canBeExpanded"
                />
                <span
                  className="treeViewRowColumn treeViewMainColumn name"
                >
                  D
                </span>
                <span
                  className="treeViewRowColumn treeViewAppendageColumn lib"
                >
                  
                </span>
                <input
                  className="treeViewRowAppendageButton focusCallstackButton"
                  data-appendage-button-name="focusCallstackButton"
                  type="button"
                  value=""
                />
              </div>
              <div
                className="treeViewRow treeViewRowScrolledColumns even selected "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeRowIndentSpacer"
                  style={
                    Object {
                      "width": "40px",
                    }
                  }
                />
                <span
                  className="treeRowToggleButton expanded leaf"
                />
                <span
                  className="treeViewRowColumn treeViewMainColumn name"
                >
                  E
                </span>
                <span
                  className="treeViewRowColumn treeViewAppendageColumn lib"
                >
                  
                </span>
                <input
                  className="treeViewRowAppendageButton focusCallstackButton"
                  data-appendage-button-name="focusCallstackButton"
                  type="button"
                  value=""
                />
              </div>
              <div
                className="treeViewRow treeViewRowScrolledColumns odd  "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeRowIndentSpacer"
                  style={
                    Object {
                      "width": "30px",
                    }
                  }
                />
                <span
                  className="treeRowToggleButton collapsed canBeExpanded"
                />
                <span
                  className="treeViewRowColumn treeViewMainColumn name"
                >
                  F
                </span>
                <span
                  className="treeViewRowColumn treeViewAppendageColumn lib"
                >
                  
                </span>
                <input
                  className="treeViewRowAppendageButton focusCallstackButton"
                  data-appendage-button-name="focusCallstackButton"
                  type="button"
                  value=""
                />
              </div>
              <div
                className="treeViewRow treeViewRowScrolledColumns even  "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeRowIndentSpacer"
                  style={
                    Object {
                      "width": "20px",
                    }
                  }
                />
                <span
                  className="treeRowToggleButton collapsed canBeExpanded"
                />
                <span
                  className="treeViewRowColumn treeViewMainColumn name"
                >
                  H
                </span>
                <span
                  className="treeViewRowColumn treeViewAppendageColumn lib"
                >
                  
                </span>
                <input
                  className="treeViewRowAppendageButton focusCallstackButton"
                  data-appendage-button-name="focusCallstackButton"
                  type="button"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`calltree/ProfileCallTreeView renders call tree with a search string 1`] = `
<div
  className="treeAndSidebarWrapper"
>
  <ol
    className="filterNavigatorBar calltreeTransformNavigator"
  >
    <li
      className="filterNavigatorBarItem filterNavigatorBarRootItem filterNavigatorBarSelectedItem filterNavigatorBarLeafItem"
      data-index={0}
      onClick={[Function]}
      title="Complete \\"Empty\\""
    >
      <span
        className="filterNavigatorBarItemContent"
      >
        Complete "Empty"
      </span>
    </li>
  </ol>
  <div
    className="profileCallTreeSettings"
  >
    <ul
      className="profileCallTreeSettingsList"
    >
      <li
        className="profileCallTreeSettingsListItem"
      >
        <label
          className="profileCallTreeSettingsLabel"
        >
          Filter:
          <select
            className="profileCallTreeSettingsSelect"
            onChange={[Function]}
            value="combined"
          >
            <option
              value="combined"
            >
              Combined stacks
            </option>
            <option
              value="js"
            >
              JS only
            </option>
            <option
              value="cpp"
            >
              C++ only
            </option>
          </select>
        </label>
      </li>
      <li
        className="profileCallTreeSettingsListItem"
      >
        <label
          className="profileCallTreeSettingsLabel"
        >
          <input
            checked={false}
            className="profileCallTreeSettingsCheckbox"
            onChange={[Function]}
            type="checkbox"
          />
           Invert call stack
        </label>
      </li>
    </ul>
    <div
      className="profileCallTreeSettingsSearchbar"
    >
      <label
        className="profileCallTreeSettingsSearchbarLabel"
      >
        Filter stacks: 
        <form
          className="idleSearchField profileCallTreeSettingsSearchField"
          onSubmit={[Function]}
        >
          <input
            className="idleSearchFieldInput"
            name="search"
            onChange={[Function]}
            onFocus={[Function]}
            required="required"
            title="Only display stacks which contain a function whose name matches this substring"
            type="search"
            value="H"
          />
          <input
            className="idleSearchFieldButton"
            onClick={[Function]}
            onFocus={[Function]}
            type="reset"
          />
        </form>
      </label>
    </div>
  </div>
  <div
    className="treeView"
  >
    <div
      className="treeViewHeader"
    >
      <span
        className="treeViewHeaderColumn treeViewFixedColumn totalTimePercent"
      >
        
      </span>
      <span
        className="treeViewHeaderColumn treeViewFixedColumn totalTime"
      >
        Running Time (ms)
      </span>
      <span
        className="treeViewHeaderColumn treeViewFixedColumn selfTime"
      >
        Self (ms)
      </span>
      <span
        className="treeViewHeaderColumn treeViewFixedColumn icon"
      >
        
      </span>
      <span
        className="treeViewHeaderColumn treeViewMainColumn name"
      >
        
      </span>
    </div>
    <div
      className="react-contextmenu-wrapper treeViewContextMenu"
      onContextMenu={[Function]}
      onMouseDown={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="treeViewBody"
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <div
          className="treeViewBodyInnerWrapper"
        >
          <div
            className="treeViewBodyInner treeViewBodyInner0"
            style={
              Object {
                "height": "64px",
                "width": undefined,
              }
            }
          >
            <div
              className="treeViewBodyInner treeViewBodyInner0TopSpacer"
              style={
                Object {
                  "height": "0px",
                }
              }
            />
            <div
              className="treeViewBodyInner treeViewBodyInner0InnerChunk"
            >
              <div
                className="treeViewRow treeViewRowFixedColumns even "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTimePercent"
                >
                  100%
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTime"
                >
                  1
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn selfTime"
                >
                  —
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn icon"
                >
                  <div
                    className="treeRowIcon "
                  />
                </span>
              </div>
              <div
                className="treeViewRow treeViewRowFixedColumns odd "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTimePercent"
                >
                  100%
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTime"
                >
                  1
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn selfTime"
                >
                  —
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn icon"
                >
                  <div
                    className="treeRowIcon "
                  />
                </span>
              </div>
              <div
                className="treeViewRow treeViewRowFixedColumns even "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTimePercent"
                >
                  100%
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTime"
                >
                  1
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn selfTime"
                >
                  —
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn icon"
                >
                  <div
                    className="treeRowIcon "
                  />
                </span>
              </div>
              <div
                className="treeViewRow treeViewRowFixedColumns odd selected"
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTimePercent"
                >
                  100%
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn totalTime"
                >
                  1
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn selfTime"
                >
                  1
                </span>
                <span
                  className="treeViewRowColumn treeViewFixedColumn icon"
                >
                  <div
                    className="treeRowIcon "
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            className="treeViewBodyInner treeViewBodyInner1"
            style={
              Object {
                "height": "64px",
                "width": "3000px",
              }
            }
          >
            <div
              className="treeViewBodyInner treeViewBodyInner1TopSpacer"
              style={
                Object {
                  "height": "0px",
                }
              }
            />
            <div
              className="treeViewBodyInner treeViewBodyInner1InnerChunk"
            >
              <div
                className="treeViewRow treeViewRowScrolledColumns even  "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeRowIndentSpacer"
                  style={
                    Object {
                      "width": "0px",
                    }
                  }
                />
                <span
                  className="treeRowToggleButton expanded canBeExpanded"
                />
                <span
                  className="treeViewRowColumn treeViewMainColumn name"
                >
                  A
                </span>
                <span
                  className="treeViewRowColumn treeViewAppendageColumn lib"
                >
                  
                </span>
                <input
                  className="treeViewRowAppendageButton focusCallstackButton"
                  data-appendage-button-name="focusCallstackButton"
                  type="button"
                  value=""
                />
              </div>
              <div
                className="treeViewRow treeViewRowScrolledColumns odd  "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeRowIndentSpacer"
                  style={
                    Object {
                      "width": "10px",
                    }
                  }
                />
                <span
                  className="treeRowToggleButton expanded canBeExpanded"
                />
                <span
                  className="treeViewRowColumn treeViewMainColumn name"
                >
                  B
                </span>
                <span
                  className="treeViewRowColumn treeViewAppendageColumn lib"
                >
                  
                </span>
                <input
                  className="treeViewRowAppendageButton focusCallstackButton"
                  data-appendage-button-name="focusCallstackButton"
                  type="button"
                  value=""
                />
              </div>
              <div
                className="treeViewRow treeViewRowScrolledColumns even  "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeRowIndentSpacer"
                  style={
                    Object {
                      "width": "20px",
                    }
                  }
                />
                <span
                  className="treeRowToggleButton expanded canBeExpanded"
                />
                <span
                  className="treeViewRowColumn treeViewMainColumn name"
                >
                  
                  <span
                    className="treeViewHighlighting"
                  >
                    H
                  </span>
                  
                </span>
                <span
                  className="treeViewRowColumn treeViewAppendageColumn lib"
                >
                  
                </span>
                <input
                  className="treeViewRowAppendageButton focusCallstackButton"
                  data-appendage-button-name="focusCallstackButton"
                  type="button"
                  value=""
                />
              </div>
              <div
                className="treeViewRow treeViewRowScrolledColumns odd selected "
                onMouseDown={[Function]}
                style={
                  Object {
                    "height": "16px",
                  }
                }
              >
                <span
                  className="treeRowIndentSpacer"
                  style={
                    Object {
                      "width": "30px",
                    }
                  }
                />
                <span
                  className="treeRowToggleButton expanded leaf"
                />
                <span
                  className="treeViewRowColumn treeViewMainColumn name"
                >
                  I
                </span>
                <span
                  className="treeViewRowColumn treeViewAppendageColumn lib"
                >
                  
                </span>
                <input
                  className="treeViewRowAppendageButton focusCallstackButton"
                  data-appendage-button-name="focusCallstackButton"
                  type="button"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
